--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>HW5 Solution 1</title>
+    <title>Weather App</title>
     <script
       src="https://kit.fontawesome.com/3f2efdf1ae.js"
       crossorigin="anonymous"
