Added footer and external border to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -26,116 +26,128 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <form id="search-form">
+      <div class="page">
+        <div class="weather-app">
+          <form id="search-form">
+            <div class="row">
+              <div class="col-8">
+                <input
+                  type="search"
+                  placeholder="Enter a city"
+                  class="form-control search-bar"
+                  id="search-input"
+                />
+              </div>
+              <div class="col-2 d-grid gap-2 d-md-flex justify-content-md-end">
+                <button
+                  type="submit"
+                  class="form-control search-button"
+                  id="search-button"
+                >
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
+              </div>
+              <div class="col-2 current-button-column">
+                <button
+                  type="button"
+                  class="btn btn-primary current-button"
+                  id="current-location-button"
+                >
+                  Current
+                </button>
+              </div>
+            </div>
+          </form>
+          <br />
           <div class="row">
-            <div class="col-8">
-              <input
-                type="search"
-                placeholder="Enter a city"
-                class="form-control search-bar"
-                id="search-input"
-              />
+            <div class="col-9" class="city">
+              <h1 id="city">Zurich</h1>
             </div>
-            <div class="col-2 d-grid gap-2 d-md-flex justify-content-md-end">
-              <button
-                type="submit"
-                class="form-control search-button"
-                id="search-button"
-              >
-                <i class="fa-solid fa-magnifying-glass"></i>
-              </button>
-            </div>
-            <div class="col-2 current-button-column">
-              <button
-                type="button"
-                class="btn btn-primary current-button"
-                id="current-location-button"
-              >
-                Current
-              </button>
+            <div class="col-3">
+              <div class="main-emoji">
+                <i class="fa-solid fa-cloud-sun"></i>
+              </div>
             </div>
           </div>
-        </form>
-        <br />
-        <div class="row">
-          <div class="col-9" class="city">
-            <h1 id="city">Zurich</h1>
-          </div>
-          <div class="col-3">
-            <div class="main-emoji">
-              <i class="fa-solid fa-cloud-sun"></i>
+          <br />
+          <div class="row todays-weather">
+            <div class="col-6">
+              <ul class="below-city">
+                <li id="todays-date"></li>
+                <li id="description">Partially cloudy</li>
+              </ul>
             </div>
-          </div>
-        </div>
-        <br />
-        <div class="row todays-weather">
-          <div class="col-6">
-            <ul class="below-city">
-              <li id="todays-date"></li>
-              <li id="description">Partially cloudy</li>
-            </ul>
-          </div>
 
-          <div class="col-6 weather-description">
-            <ul>
-              <li>Humidity: <span id="humidity">20</span>%</li>
-              <li>Wind:<span id="wind">10 </span> km/h</li>
-            </ul>
+            <div class="col-6 weather-description">
+              <ul>
+                <li>Humidity: <span id="humidity">20</span>%</li>
+                <li>Wind:<span id="wind">10 </span> km/h</li>
+              </ul>
+            </div>
+          </div>
+          <div class="main-temperature" id="main-temperature">
+            <span id="temperature">19</span>
+            <span class="units">
+              <a href="#" class="celsius" id="celsius-link">°C</a>
+              <span class="space">|</span>
+              <a href="#" class="fahrenheit" id="fahrenheit-link">°F</a>
+            </span>
+          </div>
+          <div class="columns-days">
+            <div class="col-2 column-one">
+              <div class="day-one">Tue</div>
+              <div class="emoji-one"><i class="fa-solid fa-sun"></i></div>
+              <div class="temperature-one">28°</div>
+            </div>
+            <div class="col-2 column-two">
+              <div class="day-two">Wed</div>
+              <div class="emoji-two">
+                <i class="fa-solid fa-cloud-sun"></i>
+              </div>
+              <div class="temperature-two">22°</div>
+            </div>
+            <div class="col-2 column-three">
+              <div class="day-three">Thur</div>
+              <div class="emoji-three">
+                <i class="fa-solid fa-cloud-rain"></i>
+              </div>
+              <div class="temperature-three">22°</div>
+            </div>
+            <div class="col-2 column-four">
+              <div class="day-four">Fri</div>
+              <div class="emoji-four">
+                <i class="fa-solid fa-cloud-bolt"></i>
+              </div>
+              <div class="temperature-four">22°</div>
+            </div>
+            <div class="col-2 column-five">
+              <div class="day-five">Sat</div>
+              <div class="emoji-five">
+                <i class="fa-solid fa-cloud-sun-rain"></i>
+              </div>
+              <div class="temperature-five">22°</div>
+            </div>
+            <div class="col-2 column-six">
+              <div class="day-five">Sun</div>
+              <div class="emoji-five">
+                <i class="fa-solid fa-cloud-sun-rain"></i>
+              </div>
+              <div class="temperature-five">21°</div>
+            </div>
           </div>
         </div>
-        <div class="main-temperature" id="main-temperature">
-          <span id="temperature">19</span>
-          <span class="units">
-            <a href="#" class="celsius" id="celsius-link">°C</a>
-            <span class="space">|</span>
-            <a href="#" class="fahrenheit" id="fahrenheit-link">°F</a>
-          </span>
-        </div>
-        <div class="columns-days">
-          <div class="col-2 column-one">
-            <div class="day-one">Tue</div>
-            <div class="emoji-one"><i class="fa-solid fa-sun"></i></div>
-            <div class="temperature-one">28°</div>
-          </div>
-          <div class="col-2 column-two">
-            <div class="day-two">Wed</div>
-            <div class="emoji-two">
-              <i class="fa-solid fa-cloud-sun"></i>
-            </div>
-            <div class="temperature-two">22°</div>
-          </div>
-          <div class="col-2 column-three">
-            <div class="day-three">Thur</div>
-            <div class="emoji-three">
-              <i class="fa-solid fa-cloud-rain"></i>
-            </div>
-            <div class="temperature-three">22°</div>
-          </div>
-          <div class="col-2 column-four">
-            <div class="day-four">Fri</div>
-            <div class="emoji-four">
-              <i class="fa-solid fa-cloud-bolt"></i>
-            </div>
-            <div class="temperature-four">22°</div>
-          </div>
-          <div class="col-2 column-five">
-            <div class="day-five">Sat</div>
-            <div class="emoji-five">
-              <i class="fa-solid fa-cloud-sun-rain"></i>
-            </div>
-            <div class="temperature-five">22°</div>
-          </div>
-          <div class="col-2 column-six">
-            <div class="day-five">Sun</div>
-            <div class="emoji-five">
-              <i class="fa-solid fa-cloud-sun-rain"></i>
-            </div>
-            <div class="temperature-five">21°</div>
-          </div>
-        </div>
+        <footer class="col-12 footer">
+        <a
+          href="https://github.com/TanPicK/weather-app-project"
+          target="_blank"
+          title="Git Hub poject page"
+        >
+          Open-source code
+        </a>
+        by Tania Pichierri
+      </footer>
       </div>
-    </div>
+      
     <script src="app/index.js"></script>
   </body>
 </html>
