--- a/index.html
+++ b/index.html
@@ -71,21 +71,13 @@
           </div>
           <br />
           <div class="row todays-weather">
-            <div class="col-6">
+            <div class="col-4">
               <ul class="below-city">
                 <li id="todays-date"></li>
                 <li id="description">Partially cloudy</li>
               </ul>
             </div>
-
-            <div class="col-6 weather-description">
-              <ul>
-                <li>Humidity: <span id="humidity">20</span>%</li>
-                <li>Wind:<span id="wind">10 </span> km/h</li>
-              </ul>
-            </div>
-          </div>
-          <div class="main-temperature" id="main-temperature">
+      <div class="col-4 main-temperature" id="main-temperature">
             <span id="temperature">19</span>
             <span class="units">
               <a href="#" class="celsius" id="celsius-link">°C</a>
@@ -93,6 +85,15 @@
               <a href="#" class="fahrenheit" id="fahrenheit-link">°F</a>
             </span>
           </div>
+            <div class="col-4 weather-description">
+              <ul>
+                <li>Humidity: <span id="humidity">20</span>%</li>
+                <li>Wind: <span id="wind">10 </span> km/h</li>
+              </ul>
+            </div>
+          </div>
+          <br>
+          
           <div class="columns-days">
             <div class="col-2 column-one">
               <div class="day-one">Tue</div>
