Removed fake data in HTML for the top half part of the app

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             <div class="col-4">
               <ul class="below-city">
                 <li id="todays-date"></li>
-                <li id="description">Partially cloudy</li>
+                <li id="description"></li>
               </ul>
             </div>
       <div class="col-5 main-temperature" id="main-temperature">
-            <span id="temperature">19</span>
+            <span id="temperature"></span>
             <span class="units">
               <a href="#" class="celsius" id="celsius-link">°C</a>
               <span class="space">|</span>
@@ -87,8 +87,8 @@
           </div>
             <div class="col-3 weather-description">
               <ul>
-                <li>Humidity: <span id="humidity">20</span>%</li>
-                <li>Wind: <span id="wind">10 </span> km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
