Changed "description" in HTML, CSS and JS and added "Letten" to the exceptions for Zurich

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="col-4">
               <ul class="below-city">
                 <li id="todays-date"></li>
-                <li id="description"></li>
+                <li class="description" id="description"></li>
               </ul>
             </div>
       <div class="col-5 main-temperature" id="main-temperature">
@@ -85,7 +85,7 @@
               <a href="#" class="fahrenheit" id="fahrenheit-link">°F</a>
             </span>
           </div>
-            <div class="col-3 weather-description">
+            <div class="col-3 humidity-wind">
               <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> km/h</li>
