activated celsius and fahrenheit conversion in JS

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <h1 id="city">Zurich</h1>
             </div>
             <div class="col-3">
-              <div class="main-emoji">
+              <div class="main-emoji" id="main-emoji">
                 <i class="fa-solid fa-cloud-sun"></i>
               </div>
             </div>
