--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="col-5 main-temperature" id="main-temperature">
             <span id="temperature"></span>
             <span class="units">
-              <a href="#" class="celsius" id="celsius-link">°C</a>
+              <a href="#" class="celsius active" id="celsius-link">°C</a>
               <span class="space">|</span>
               <a href="#" class="fahrenheit" id="fahrenheit-link">°F</a>
             </span>
