edited current date/formatDate function in JS

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
           </div>
           <br />
           <div class="row todays-weather">
-            <div class="col-4">
+            <div class="col-5">
               <ul class="below-city">
-                <li id="todays-date"></li>
+                <li> Last update: <span id="todays-date"> </span></li>
                 <li class="description" id="description"></li>
               </ul>
             </div>
-      <div class="col-5 main-temperature" id="main-temperature">
+      <div class="col-4 main-temperature" id="main-temperature">
             <span id="temperature"></span>
             <span class="units">
               <a href="#" class="celsius active" id="celsius-link">°C</a>
