addressed icon update in HTML and JS

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
               <h1 id="city">Zurich</h1>
             </div>
             <div class="col-3">
-              <div class="main-emoji" id="main-emoji">
-                <i class="fa-solid fa-cloud-sun"></i>
-              </div>
+              <img class="main-emoji" id="main-icon"
+              src="http://openweathermap.org/img/wn/10d@2x.png"
+              alt="rain"/>
             </div>
           </div>
           <br />
