--- a/index.html
+++ b/index.html
@@ -69,24 +69,19 @@
               alt="rain"/>
             </div>
           </div>
-          <br />
+          
           <div class="row todays-weather">
-            <div class="col-5">
+            <div class="col-5 ">
               <ul class="below-city">
                 <li> Last update: <span id="todays-date"> </span></li>
                 <li class="description" id="description"></li>
               </ul>
             </div>
       <div class="col-4 main-temperature" id="main-temperature">
-            <span id="temperature"></span>
-            <span class="units">
-              <a href="#" class="celsius active" id="celsius-link">°C</a>
-              <span class="space">|</span>
-              <a href="#" class="fahrenheit" id="fahrenheit-link">°F</a>
-            </span>
+            <span id="temperature"> </span><span class=" units"><a href="#" class="celsius active" id="celsius-link">°C </a><span class="space">| </span><a href="#" class="fahrenheit" id="fahrenheit-link">°F</a></span>
           </div>
-            <div class="col-3 humidity-wind">
-              <ul>
+            <div class="col-3">
+              <ul class="humidity-wind">
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
