changed "last update" to "latest update in HTML

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="row todays-weather">
             <div class="col-6 ">
               <ul class="below-city">
-                <li> Last update: <span id="todays-date"> </span></li>
+                <li> Latest update: <span id="todays-date"> </span></li>
                 <li class="description" id="description"></li>
               </ul>
             </div>
