--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                   placeholder="Enter a city"
                   class="form-control search-bar"
                   id="search-input"
+                  autocomplete="off"
                 />
               </div>
               <div class="col-2 d-grid gap-2 d-md-flex justify-content-md-end">
