Edited the weather forecast section in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -88,50 +88,18 @@
               </ul>
             </div>
           </div>
-          <br>
-          
-          <div class="columns-days">
-            <div class="col-2 column-one">
-              <div class="day-one">Tue</div>
+          <div class="weather-forecast">
+            <div class="row">
+            <div class="col-2">
+              <div class="weather-forecast-day">Tue</div>
               <div class="emoji-one"><i class="fa-solid fa-sun"></i></div>
-              <div class="temperature-one">28°</div>
-            </div>
-            <div class="col-2 column-two">
-              <div class="day-two">Wed</div>
-              <div class="emoji-two">
-                <i class="fa-solid fa-cloud-sun"></i>
+              <div class="weather-forecast-temperatures">
+                <span class="weather-forecast-temperature-max">28°</span>
+                <span class="weather-forecast-temperature-min">28°</span>
               </div>
-              <div class="temperature-two">22°</div>
-            </div>
-            <div class="col-2 column-three">
-              <div class="day-three">Thur</div>
-              <div class="emoji-three">
-                <i class="fa-solid fa-cloud-rain"></i>
-              </div>
-              <div class="temperature-three">22°</div>
-            </div>
-            <div class="col-2 column-four">
-              <div class="day-four">Fri</div>
-              <div class="emoji-four">
-                <i class="fa-solid fa-cloud-bolt"></i>
-              </div>
-              <div class="temperature-four">22°</div>
-            </div>
-            <div class="col-2 column-five">
-              <div class="day-five">Sat</div>
-              <div class="emoji-five">
-                <i class="fa-solid fa-cloud-sun-rain"></i>
-              </div>
-              <div class="temperature-five">22°</div>
-            </div>
-            <div class="col-2 column-six">
-              <div class="day-five">Sun</div>
-              <div class="emoji-five">
-                <i class="fa-solid fa-cloud-sun-rain"></i>
-              </div>
-              <div class="temperature-five">21°</div>
-            </div>
           </div>
+        </div>
+      </div>
         </div>
         <footer class="col-12 footer">
         <a
