--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
+          <div class="forecast" id="forecast">
             <div class="row">
             <div class="col-2">
-              <div class="weather-forecast-day">Tue</div>
+              <div class="forecast-day">Tue</div>
               <div class="emoji-one"><i class="fa-solid fa-sun"></i></div>
-              <div class="weather-forecast-temperatures">
-                <span class="weather-forecast-temperature-max">28°</span>
-                <span class="weather-forecast-temperature-min">28°</span>
+              <div class="forecast-temperatures">
+                <span class="forecast-temperature-max">28°</span>
+                <span class="forecast-temperature-min">28°</span>
               </div>
           </div>
         </div>
