--- a/index.html
+++ b/index.html
@@ -65,22 +65,32 @@
               <h1 id="city">Zurich</h1>
             </div>
             <div class="col-3">
-              <img class="main-emoji" id="main-icon"
-              src="http://openweathermap.org/img/wn/10d@2x.png"
-              alt="rain"/>
+              <img
+                class="main-emoji"
+                id="main-icon"
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+                alt="rain"
+              />
             </div>
           </div>
-          
+
           <div class="row todays-weather">
-            <div class="col-6 ">
+            <div class="col-6">
               <ul class="below-city">
-                <li> Latest update: <span id="todays-date"> </span></li>
+                <li>Latest update: <span id="todays-date"> </span></li>
                 <li class="description" id="description"></li>
               </ul>
             </div>
-      <div class="col-3 main-temperature" id="main-temperature">
-            <span id="temperature"> </span><span class=" units"><a href="#" class="celsius active" id="celsius-link">°C </a><span class="space">| </span><a href="#" class="fahrenheit" id="fahrenheit-link">°F</a></span>
-          </div>
+            <div class="col-3 main-temperature" id="main-temperature">
+              <span id="temperature"> </span
+              ><span class="units"
+                ><a href="#" class="celsius active" id="celsius-link">°C </a
+                ><span class="space">| </span
+                ><a href="#" class="fahrenheit" id="fahrenheit-link"
+                  >°F</a
+                ></span
+              >
+            </div>
             <div class="col-3">
               <ul class="humidity-wind">
                 <li>Humidity: <span id="humidity"></span>%</li>
@@ -88,31 +98,20 @@
               </ul>
             </div>
           </div>
-          <div class="forecast" id="forecast">
-            <div class="row">
-            <div class="col-2">
-              <div class="forecast-day">Tue</div>
-              <div class="emoji-one"><i class="fa-solid fa-sun"></i></div>
-              <div class="forecast-temperatures">
-                <span class="forecast-temperature-max">28°</span>
-                <span class="forecast-temperature-min">28°</span>
-              </div>
-          </div>
-        </div>
-      </div>
+          <div class="forecast" id="forecast"></div>
         </div>
         <footer class="col-12 footer">
-        <a
-          href="https://github.com/TanPicK/weather-app-project"
-          target="_blank"
-          title="Git Hub poject page"
-        >
-          Open-source code
-        </a>
-        by Tania Pichierri
-      </footer>
+          <a
+            href="https://github.com/TanPicK/weather-app-project"
+            target="_blank"
+            title="Git Hub poject page"
+          >
+            Open-source code
+          </a>
+          by Tania Pichierri
+        </footer>
       </div>
-      
+    </div>
     <script src="app/index.js"></script>
   </body>
 </html>
