--- a/index.html
+++ b/index.html
@@ -82,14 +82,7 @@
               </ul>
             </div>
             <div class="col-3 main-temperature" id="main-temperature">
-              <span id="temperature"> </span
-              ><span class="units"
-                ><a href="#" class="celsius active" id="celsius-link">°C </a
-                ><span class="space">| </span
-                ><a href="#" class="fahrenheit" id="fahrenheit-link"
-                  >°F</a
-                ></span
-              >
+              <span id="temperature"> </span><span class="unit">°C</span>
             </div>
             <div class="col-3">
               <ul class="humidity-wind">
