--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <div class="col-2 d-grid gap-2 d-md-flex justify-content-md-end">
                 <button
                   type="submit"
-                  class="form-control search-button"
+                  class="form-control search-button shadow-sm"
                   id="search-button"
                 >
                   <i class="fa-solid fa-magnifying-glass"></i>
@@ -51,7 +51,7 @@
               <div class="col-2 current-button-column">
                 <button
                   type="button"
-                  class="btn btn-primary current-button"
+                  class="btn btn-primary current-button shadow-sm"
                   id="current-location-button"
                 >
                   Current
