added shadow to the search bar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input
                   type="search"
                   placeholder="Enter a city"
-                  class="form-control search-bar"
+                  class="form-control search-bar shadow-sm"
                   id="search-input"
                   autocomplete="off"
                 />
