Removed media queries to keep the project as it was originally

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="col-9 city">
               <h1 id="city">Zurich</h1>
             </div>
-            <div class="col-3 emoji-column">
+            <div class="col-3">
               <img
                 class="main-emoji"
                 id="main-icon"
